SERVER-45389 Add metrics tracking how often shards have inconsistent indexes
(cherry picked from commit ea696eb7a27f18c21223a3ff94d9124f06698af5)

SERVER-46084 Don't use setUnion in aggregation for finding inconsistent sharded indexes

(cherry picked from commit 2eaf0ba58cca9e96276e8a07a3d46f0a7b83289d)

--- a/src/mongo/db/commands/SConscript
+++ b/src/mongo/db/commands/SConscript
@@ -194,7 +194,7 @@ env.Library(
         "fsync.cpp",
     ],
     LIBDEPS_PRIVATE=[
-	'$BUILD_DIR/mongo/db/auth/authprivilege',
+        '$BUILD_DIR/mongo/db/auth/authprivilege',
         '$BUILD_DIR/mongo/db/commands',
         '$BUILD_DIR/mongo/db/concurrency/write_conflict_exception',
         '$BUILD_DIR/mongo/db/curop',
@@ -359,6 +359,7 @@ env.Library(
         "restart_catalog_command.cpp",
         "set_feature_compatibility_version_command.cpp",
         "set_index_commit_quorum_command.cpp",
+        "sharded_index_consistency_server_status.cpp",
         "shutdown_d.cpp",
         "snapshot_management.cpp",
         "top_command.cpp",
@@ -404,6 +405,7 @@ env.Library(
         'mongod_fcv',
         'mongod_fsync',
         'profile_common',
+        'server_status',
         'servers',
         'set_index_commit_quorum_idl',
         'shell_protocol',
