SERVER-44909 Sys-perf: Add industry_benchmarks_wmajority task to 1 node replica set

--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -1014,6 +1014,7 @@ buildvariants:
     - name: tpcc
     - name: genny_patch_tasks
     - name: genny_auto_tasks
+    - name: industry_benchmarks_wmajority
 
 - name: linux-standalone
   display_name: Linux Standalone
