--- a/src/mongo/db/pipeline/SConscript
+++ b/src/mongo/db/pipeline/SConscript
@@ -281,6 +281,8 @@ env.Library(
         'lite_parsed_pipeline.cpp',
         ],
     LIBDEPS=[
+        '$BUILD_DIR/mongo/db/commands/server_status_core',
+        '$BUILD_DIR/mongo/db/stats/counters',
         'aggregation_request',
     ]
 )
