SERVER-44689 Add serverStatus counter for each use of an aggregation stage in a user's request
(cherry picked from commit c54a777a4a154984f5595b11993d7d009350a38c)
(cherry picked from commit 08266fc2ad15e2cba4af79e58a83e822e7c540dc)

--- a/src/mongo/db/pipeline/SConscript
+++ b/src/mongo/db/pipeline/SConscript
@@ -256,6 +256,8 @@ env.Library(
         'lite_parsed_document_source.cpp',
         ],
     LIBDEPS=[
+        '$BUILD_DIR/mongo/db/commands/server_status_core',
+        '$BUILD_DIR/mongo/db/stats/counters',
         'aggregation_request',
     ]
 )
