SERVER-44689 Add serverStatus counter for each use of an aggregation stage in a user's request

--- a/src/mongo/db/pipeline/SConscript
+++ b/src/mongo/db/pipeline/SConscript
@@ -184,6 +184,7 @@ env.Library(
         'lite_parsed_pipeline.cpp',
         ],
     LIBDEPS=[
+        '$BUILD_DIR/mongo/db/stats/counters',
         'aggregation_request',
     ]
 )
