SERVER-45479 Teach ninja how to build test lists

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -3886,7 +3886,7 @@ tasks:
         task_compile_flags: >-
           --ninja
         targets:
-          new.build.ninja
+          build.ninja
     - command: shell.exec
       params:
         working_dir: src
