SERVER-45853 Enable RaftMongo.tla invariants
Also speed up model-checking for all Replication models, and remove an
obsolete comment in RaftMongo.tla.

--- a/src/mongo/db/repl/tla_plus/RaftMongo/MCRaftMongo.cfg
+++ b/src/mongo/db/repl/tla_plus/RaftMongo/MCRaftMongo.cfg
@@ -14,8 +14,16 @@ CONSTANT MaxLogLen = 3
 \* The set of server IDs. Adjust to test different replica set sizes.
 CONSTANT Server = {1, 2, 3}
 
-\* Add invariants if desired.
 INVARIANT NoTwoPrimariesInSameTerm
+
+\* NeverRollbackCommitted and NeverRollbackBeforeCommitPoint can be violated,
+\* although it's not ultimately a safety issue: SERVER-39626. The issue
+\* requires at least 5 servers, 3 terms, and oplogs of length 4+, which are
+\* larger limits than we can easily model-check.
+INVARIANT NeverRollbackCommitted
+INVARIANT NeverRollbackBeforeCommitPoint
+
+PROPERTY CommitPointEventuallyPropagates
 
 \* Not configurable.
 CONSTRAINT StateConstraint
