SERVER-45748: Ensure the correct task is used in bypass-compile for burn_in_tags
 delete mode 100644 buildscripts/tests/test_burn_in_tags_bypass_compile_and_fetch_binaries.py

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -1090,10 +1090,9 @@ functions:
             --out-file bypass_compile_expansions.yml                           \
             --version-id ${version_id}                                         \
             --json-artifact artifacts.json
-        fi
 
         # For patch builds determine if we can bypass compile.
-        if [[ "${is_patch}" = "true" && "${task_name}" = "compile" ]]; then
+        elif [[ "${is_patch}" = "true" && "${task_name}" = "compile" ]]; then
           ${activate_virtualenv}
           # Evergreen executable is in $HOME, so add that to the path.
           PATH=$PATH:$HOME $python buildscripts/bypass_compile_and_fetch_binaries.py            \
