--- a/buildscripts/resmokeconfig/suites/concurrency_simultaneous_replication_wiredtiger_cursor_sweeps.yml
+++ b/buildscripts/resmokeconfig/suites/concurrency_simultaneous_replication_wiredtiger_cursor_sweeps.yml
@@ -36,6 +36,10 @@ selector:
   # TODO: SERVER-37876
   - jstests/concurrency/fsm_workloads/multi_statement_transaction_all_commands_same_session.js
 
+  # These workloads run map-reduce, which gets a global X lock which can result in a deadlock in
+  # the presence of prepared transactions.
+  - jstests/concurrency/fsm_workloads/map_reduce*.js
+
   # This workload assumes no locks are taken outside of the workload.
   - jstests/concurrency/fsm_workloads/access_collection_in_transaction_after_catalog_changes.js
   exclude_with_any_tags:
