--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -3890,7 +3890,7 @@ tasks:
       params:
         working_dir: src
         shell: bash
-        script: ninja -f new.build.ninja
+        script: ninja -f build.ninja
 
 ## compile_all - build all scons targets ##
 - name: compile_all
