SERVER-45711 Account for blacklisted multiversion tests in burn in for non-generated multiversion suites

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -5409,6 +5409,7 @@ tasks:
     vars:
       pip_dir: ${workdir}/src/etc/pip
   - func: "upload pip requirements"
+  - func: "do multiversion setup"
   - func: "generate burn in tags"
     vars:
       max_revisions: 25
