--- a/src/mongo/base/error_codes.yml
+++ b/src/mongo/base/error_codes.yml
@@ -323,7 +323,8 @@ error_codes:
     # Internal only code used by WaitForMajorityService.
     - {code: 289,name: WaitForMajorityServiceEarlierOpTimeAvailable}
 
-    - {code: 290,name: TransactionExceededLifetimeLimitSeconds,categories: [ExceededTimeLimitError]}
+    - {code: 290,name: TransactionExceededLifetimeLimitSeconds,
+                 categories: [Interruption,ExceededTimeLimitError]}
     - {code: 291,name: NoQueryExecutionPlans}
     - {code: 292,name: QueryExceededMemoryLimitNoDiskUseAllowed}
     - {code: 293,name: InvalidSeedList}
