Revert "SERVER-45824 Use Ninja's response files instead of hard coding them into the generated file"
This reverts commit 4dfbe1988c96cc0c46999095d3f1bbfd47ed2160.

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -3890,7 +3890,7 @@ tasks:
       params:
         working_dir: src
         shell: bash
-        script: ninja -f build.ninja
+        script: ninja -f new.build.ninja
 
 ## compile_all - build all scons targets ##
 - name: compile_all
